[package]
name = "wreck"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "WRECK"
path = "src/bin/main.rs"

[dependencies]
silly-lex = { path = "./silly-lex" }
thiserror = "*"
anyhow = "*"
derive_more = "*"
regex = "*"
lazy_static = "*"
tabular = "*"
petgraph = "*"
structopt = "*"